# Matrix

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: matrix.hpp  real_nums.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  check_end_to_end.py  tests.cpp
tests/end_to_end/: 2.dat.ans  3.dat.ans  4.dat.ans  5.dat.ans  6.dat.ans  7.dat.ans
